<resources>
    <string name="app_name">StudHunter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="university">Университет</string>
    <string name="_continue">Продолжить</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="add">Добавить</string>
    <string name="categories">Категории</string>
    <string name="home">Главная</string>
    <string name="download_update">Скачать обновление</string>
    <string name="install_update">Установить обновление</string>
    <string name="stud_hunter">StudHunter</string>
    <string name="login">Логин</string>
    <string name="sign_in_greeting">Пожалуйста, введите логин и пароль</string>
    <string name="sign_in">Войти</string>
    <string name="authorization">Авторизация</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="auth_greeting">Для продолжения зарегистрируйтесь, чтобы пользоваться всеми функциями приложения.</string>
    <string name="wrong_password">Неправильный пароль</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="wrong_username_or_password">Неправильный логин или пароль</string>
    <string name="error">Ошибка</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="category">Категория</string>
    <string name="gallery_image_position">%2$d</string>
    <string name="creating_publication">Создание объявления</string>
    <string name="add_photo">Добавьте фото</string>
    <string name="no_more_than_3_photo">Не более 3 фотографий</string>
    <string name="add_title">Добавьте название</string>
    <string name="title">Название</string>
    <string name="add_description">Добавьте описание</string>
    <string name="write_something">Напишите что-нибудь</string>
    <string name="indicate_place">Укажите место</string>
    <string name="indicate_price">Укажите цену</string>
    <string name="price">Цена</string>
    <string name="upload">Опубликовать</string>
    <string name="delete_publication">Удалить объявление</string>
    <string name="text">Текст</string>
    <string name="indicate_category">Укажите категорию</string>
    <string name="indicate_district">Укажите район</string>
    <string name="district">Район</string>
    <string name="my_profile">Мой профиль</string>
    <string name="change_password">Сменить пароль</string>
    <string name="my_publications">Мои объявления</string>
    <string name="reference_Information">Справочная информация</string>
    <string name="about_us">О нас</string>
    <string name="about_app">О приложении</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="username">Никнейм</string>
    <string name="user_full_name">Полное имя пользователя</string>
    <string name="example_mail">example@mail.ru</string>
    <string name="indicate_registration_data">Укажите данные для регистрации</string>
    <string name="registration">Регистрация</string>
    <string name="tell_about_yourself">Расскажите о себе</string>
    <string name="imagine_username_and_password">Придумайте имя пользователя и пароль</string>
    <string name="this_username_is_already_taken">Такое имя пользователя уже занято</string>
    <string name="this_email_is_already_in_use">Такая почта уже используется</string>
    <string name="incorrect_username">Некорректное имя пользователя</string>
    <string name="incorrect_password">Некорректный пароль</string>
    <string name="incorrect_email">Некорректное мыло</string>
    <string name="strange_name">Странное имя</string>
    <string name="strange_surname">Странная фамилия</string>
    <string name="this_university_does_not_exist">Такого университета не существует</string>
    <string name="write">Написать</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="review">Отзыв</string>
    <string name="change">Изменить</string>
    <string name="change_of_profile">Изменение профиля</string>
    <string name="by_search">По поиску</string>
    <string name="ot">От</string>
    <string name="price_do">До</string>
    <string name="executor_rating">Рейтинг исполнителя</string>
    <string name="any">Любой</string>
    <string name="search">Поиск</string>
    <string name="lets_go">Погнали</string>
    <string name="network_error">Ошибка сети</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="local_error">Локальная ошибка</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
    <string name="tell_about_company">Расскажите о компании</string>
    <string name="company_name">Название компании</string>
    <string name="inn">ИНН</string>
    <string name="address">Адрес</string>
    <string name="representative">Представитель</string>
</resources>