<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.auth_screen.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginHorizontal="18dp">

        <TextView
            android:id="@+id/welcome_tv"
            style="@style/GilroyFontThemeMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="@dimen/text_18px"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/under_welcome_tv"
            style="@style/GilroyFontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/between_welcome"
            android:gravity="center"
            android:text="@string/auth_greeting"
            android:textSize="@dimen/text_16px"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/sign_up_button"
            style="@style/AppcompatButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/between_welcome"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/sign_in_button"
            style="@style/GilroyFontThemeMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_welcome"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/tertiary"
            android:textSize="@dimen/text_16px"
            android:paddingBottom="12dp"
            android:paddingHorizontal="12dp" />

    </LinearLayout>

</FrameLayout>