<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.create_publication_screen.CreatePublicationFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/background_topbar"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/publication_back_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="11dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/publication_title_tv"
            app:tint="@color/textColorPrimary" />

        <TextView
            style="@style/GilroyFontThemeMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/creating_publication"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_22px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/publication_back_iv"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/GilroyFontThemeMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                style="@style/GilroyFontTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/no_more_than_3_photo"
                android:textSize="@dimen/text_10px"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/publication_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

            <TextView
                style="@style/GilroyFontThemeMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    style="@style/TextInputEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/GilroyFontThemeMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_description"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18px"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    style="@style/TextInputEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/write_something"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/GilroyFontThemeMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indicate_district"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18px" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <AutoCompleteTextView
                    android:id="@+id/district"
                    style="@style/TextInputEdittext"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/GilroyFontThemeMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/indicate_price"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price"
                    style="@style/TextInputEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <AutoCompleteTextView
                    android:id="@+id/price_type"
                    style="@style/TextInputEdittext"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/GilroyFontThemeMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/indicate_category"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_18px"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp" >

                <AutoCompleteTextView
                    android:id="@+id/category"
                    style="@style/TextInputEdittext"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/publish_button"
                style="@style/AppcompatButton"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="24dp"
                android:text="@string/upload" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_button"
                style="@style/AppCompatButtonWithoutBackground"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:text="@string/delete_publication"
                android:textColor="@color/pink"
                android:visibility="visible"
                app:backgroundTint="@color/pink" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/transparent_loading_layout"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>