<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".presentation.sign_up_screen.SecondSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">

        <TextView
            style="@style/GilroyFontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Укажите данные для регистрации"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_16px" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/TextInputEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="@dimen/text_16px" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname"
                style="@style/TextInputEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="text"
                android:textSize="@dimen/text_16px" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/university"
                style="@style/TextInputEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/university"
                android:inputType="text"
                android:textSize="@dimen/text_16px" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_button"
            style="@style/AppcompatButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</FrameLayout>